# EGOS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md
.cursor/rules/: ai_collaboration_guidelines.mdc  ai_handover_standard.mdc  (+22 more)
analysis_results/: egos_git_analysis.csv
docs/: CRONOS_ROADMAP_UPDATES.md  README.md  index.html
egos_dashboard/: README.md  app.py
examples/crewai/job-change-monitor-template/crewAI-enterprise-job-change-monitor-template-main/: README.md  pyproject.toml
examples/crewai/job-change-monitor-template/crewAI-enterprise-job-change-monitor-template-main/src/job_change_monitor/: crew.py  main.py
examples/crewai/job-change-monitor-template/crewAI-enterprise-job-change-monitor-template-main/src/job_change_monitor/config/: agents.yaml  tasks.yaml
examples/crewai/zendesk-categorize-and-sentiment-analysis-template/crewAI-enterprise-zendesk-categorize-and-sentiment-analysis-template-main/: pyproject.toml
examples/crewai/zendesk-categorize-and-sentiment-analysis-template/crewAI-enterprise-zendesk-categorize-and-sentiment-analysis-template-main/src/zendesk_categorize_and_analyze/: main.py
examples/crewai/zendesk-categorize-and-sentiment-analysis-template/crewAI-enterprise-zendesk-categorize-and-sentiment-analysis-template-main/src/zendesk_categorize_and_analyze/config/: agents.yaml  tasks.yaml
lovable/: README.md  index.css  index.html  tailwind.config.ts
scripts/: analyze_git_history.py
subsystems/: README.md
website/: ROADMAP.md  eslint-report.json  i18n.ts  middleware.ts  next.config.js  package.json  tailwind.config.js  tailwind.config.ts
(+139 files in other folders)
