[project]
name = "zendesk_categorize_and_analyze"
version = "0.1.0"
description = "Zendesk ticket categorize and analyze using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
]

[project.scripts]
zendesk_categorize_and_analyze = "zendesk_categorize_and_analyze.main:run"
run_crew = "zendesk_categorize_and_analyze.main:run"
train = "zendesk_categorize_and_analyze.main:train"
replay = "zendesk_categorize_and_analyze.main:replay"
test = "zendesk_categorize_and_analyze.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
